Fix a leak of the output stream and socket transport due to shutdown ordering problems (bug 200094). Patch by darin, r=dougt, sr=me.